# uniproc-linux-agent

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE-MIT  README.md  uniproc-agent.service
macros/: Cargo.toml
macros/src/: lib.rs
uniproc-linux-agent/: Cargo.toml  build.rs
uniproc-linux-agent-common/: Cargo.toml
uniproc-linux-agent-common/src/: lib.rs
uniproc-linux-agent-ebpf/: Cargo.toml  build.rs
uniproc-linux-agent-ebpf/src/: constants.rs  main.rs  map.rs  maps.h  prog.bpf.c  utils.h  utils.rs  vmlinux.rs
uniproc-linux-agent-ebpf/src/include/: common.h  constants.h  disk.h  loopback.h  maps.h  mem.h  process.h  socket.h
uniproc-linux-agent-ebpf/src/probes/: disk.bpf.c  globals.bpf.c  process.bpf.c  seed.bpf.c  sockets.bpf.c
uniproc-linux-agent-ebpf/src/programs/: disk.rs  globals.rs  http_detect.rs  mod.rs  processes.rs  sockets.rs  vsock.rs
uniproc-linux-agent-ebpf/src/vmlinux/: mod.rs  vmlinux.rs
uniproc-linux-agent/src/: batch_lookup.rs  bpf.rs  globals.rs  iter_gc.rs  main.rs  name_cache.rs  proc_checker.rs  process_metrics_state.rs  seed.rs
