[workspace]
resolver = "2"
members = [
    "macros",
    "uniproc-linux-agent",
    "uniproc-linux-agent-ebpf",
]
default-members = [
    "uniproc-linux-agent"
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
macros = { path = "macros" }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }

clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }

[profile.release.package.uniproc-linux-agent-ebpf]
debug = 2
codegen-units = 1
