[package]
name = "uniproc-linux-agent-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
uniproc-linux-agent-common = { path = "../uniproc-linux-agent-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "uniproc-linux-agent"
path = "src/main.rs"
