[package]
name = "uniproc-linux-agent"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
uniproc-linux-agent-common = { path = "../uniproc-linux-agent-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "time"
] }

libbpf-rs = "0.26.0"

[build-dependencies]
libbpf-cargo = "0.26.0"

[[bin]]
name = "uniproc-linux-agent"
path = "src/main.rs"
